--- a/WEB/HTMLCSSJS/lab2/index.html
+++ b/WEB/HTMLCSSJS/lab2/index.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
         <title>Ćwiczenie selektorów CSS</title>
         
-        <link rel="stylesheet" href="styl1.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Główny tytuł</h1>  
